Testing and data correction